--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Cenwei
 middle_name: 
 last_name: Zhang
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  You can also reach me in genshin with UID 267207440 :)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Website of Cenwei Zhang.
 footer_text: >
@@ -61,7 +61,7 @@ posts_in_search: true
 bib_search: true
 
 # Dimensions
-max_width: 930px
+max_width: 900px
 
 # -----------------------------------------------------------------------------
 # Open Graph & Schema.org
