--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -29,9 +29,9 @@ cv:
           - Bioinformatics.
 
     Experience:
-      - company: Dolphin
+      - company: Dolphin AI
         position: AI Research Intern
-        location: 
+        location: Jiaxing, Zhejiang
         start_date: Apr 2025
         end_date: Dec 2025
         summary: Diffusion models for Medical Imaging
