--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,8 +1,8 @@
 cv:
   name: Cenwei Zhang
-  label: Algorithm Research and Development Intern
+  label: Mr. Selwyn 
   email: cwzhang2001@gmail.com
-  rednote: 952277002
+  url: https://cenweizhang.github.io/
 
   sections:
     Education:
