--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Cenwei
 middle_name:
 last_name: Zhang
 contact_note: >
-  You can also reach me in genshin with UID 267207440 :)
+  Email is usually the best way to reach me! You can also reach me in genshin with UID 267207440 :)
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Website of Cenwei Zhang.
 footer_text: >
