--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -9,7 +9,7 @@ cv:
       - institution: The Chinese University of Hong Kong
         location: Hong Kong, China
         url: https://www.cuhk.edu.hk/english/index.html
-        area: Information Engineering
+        area: Computer Science (Information Engineering Track)
         studyType: Master of Science
         start_date: 2026
         end_date: 2027
